{
    "name": "MainMenuTabInputActions",
    "maps": [
        {
            "name": "MainMenuTabs",
            "id": "03e07785-b3a3-4a2b-af86-98af4009bd82",
            "actions": [
                {
                    "name": "PreviousTab",
                    "type": "Button",
                    "id": "db5b531a-a4fe-4476-8ffa-c74247cdc197",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NextTab",
                    "type": "Button",
                    "id": "f0ad21c4-aead-470c-b08f-6cefb8e65a6b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "73414c68-603e-4983-8650-e2633a11c050",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PreviousTab",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9698392c-9ce6-42c7-a437-99bf66a86044",
                    "path": "<Keyboard>/#(A)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PreviousTab",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d5013444-9bfa-47c4-8e40-65abe1c073e7",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NextTab",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "179edf76-3a0d-404c-9678-a6c90b4c56d5",
                    "path": "<Keyboard>/#(E)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NextTab",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}